JBTM-3482 Adapt b116a9dca52162cce827d08258900eec2d3a7605 to provide the ORB jars to the qa/ classpath in pre-existing variable and also to deal with JBTM-3590 and JBTM-3607